[package]
name = "hive"
version = "0.1.0"
edition = "2021"
authors = ["modeckrus"]
repository = "https://github.com/modeckrus/hive"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.183", features = ["rc", "derive", "serde_derive"] }
sled = "0.34.7"
thiserror = "1.0.46"
